# VETRIS

./: .gitignore  LICENSE  README.md  calibration.py  contact.py  floor.py  least_squate_op.py  loss_fun.py  main.py  optimizer.py  pyproject.toml  robot.py  run.py  setup.py  soft_body.py  soft_cube.py  test.py  v1.py  v1_silly_rubber.py  v1_square.py  v1_study.py
data/real/: loop_1_filtered.csv  loop_1_unfiltered.csv  loop_2_filtered.csv  loop_2_unfiltered.csv
tests/: test_base_env.py
vetris/: __init__.py
vetris/cli/: simulate.py  v1.py
vetris/config/: default_config.py
vetris/engine/: mpm.py  sim.py
vetris/engine/massagers/: dual_arm.py  massager.py  straight.py
vetris/engine/materials/: kevin_voigt.py  neo_hookean.py  visco_hyperelastic.py
vetris/io/: logger.py  plotter.py  recorder.py
vetris/optimize/: config.py  engine_runner.py  losses.py  objective.py  optim_bayes.py  optim_cma.py  optim_random.py  optim_scipy.py  param_sensitivity.py  pipeline.py  plotting.py  utils.py
vetris/vis/: palette.py  render.py
vetris2D/: __init__.py
vetris2D/config/: config.py
